2017-04-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- 範囲外アクセスを修正

2016-05-28  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/formation/sample_data.cpp:
	- 確認表示用のデータインデックス値を修正

2016-05-24  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/formation/formation_dt.h:
	- FormationDT::sampleVector()を追加

2016-04-22  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/ann/sirm.cpp:
	* rcsc/ann/sirm.h:
	* rcsc/ann/sirms_model.cpp:
	* rcsc/ann/sirms_model.h:
	* rcsc/ann/Makefile.am:
	- SIRMsをライブラリとして追加
	- librcsc_annのライブラリバージョンを更新

2016-03-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/intercept_table.h:
	* rcsc/player/self_intercept_simulator.cpp:
	- InterceptInfoのコンストラクタ引数の誤りを修正
	- InterceptInfo::turnAngle()を追加

2015-08-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/intercept_table.cpp:
	* rcsc/player/intercept_table.h:
	* rcsc/player/self_intercept_simulator.cpp:
	- InterceptInfoの要素として回転角と評価値を追加

	* rcsc/player/Makefile.am:
	- self_intercept_v13.{h,cpp}をビルドターゲットから削除

2015-07-21  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	- バージョン番号を更新

	* rcsc/player/world_model.cpp:
	- 敵ディフェンスライン（＝オフサイドライン）の推定方法を調整．スピー
	ドにかける割合を0.4から0.1へ，最大ステップ数を5から3に変更

2015-07-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- 敵ディフェンスライン（＝オフサイドライン）の推定方法を調整

2015-07-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- 敵ディフェンスライン（＝オフサイドライン）の推定方法を調整

2015-06-29  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/coach/coach_world_model.cpp:
	* rcsc/coach/coach_world_model.h:
	- CoachWorldModelにlastSetPlayStartTime(),getSetPlayCount()を追加

2014-07-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	- バージョン番号を更新(rc2014)

2014-07-08  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/formation/formation.cpp:
	* rcsc/formation/formation.h:
	* rcsc/formation/formation_dt.cpp:
	- フォーメーション設定ファイルのフォーマットを変更．バー